--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather APP</title>
 
-  <!-- <link rel="stylesheet" href="css/test.css"> -->
+  <!-- <link rel="stylesheet" href="style.css"> -->
   <link rel="stylesheet" href="style.css">
 </head>
 
